--- a/public/create/stylesets/book-bw.css
+++ b/public/create/stylesets/book-bw.css
@@ -220,7 +220,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 }
 
 .toc-item-h3 {
@@ -229,7 +229,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 1em;
+	margin-left: 1em;
 }
 
 .toc-item-h4 {
@@ -238,7 +238,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 2em;
+	margin-left: 2em;
 }
 
 .toc-item-h5 {
@@ -247,7 +247,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 3em;
+	margin-left: 3em;
 }
 
 .toc-item-h6 {
@@ -256,7 +256,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 4em;
+	margin-left: 4em;
 }
 
 /*Name: Colophon*/
