--- a/public/create/stylesets/extravaganza-bw.css
+++ b/public/create/stylesets/extravaganza-bw.css
@@ -237,7 +237,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#606060;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 	text-transform: uppercase;
 }
 
@@ -248,7 +248,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#606060;
-	text-indent: 1em;
+	margin-left: 1em;
 	text-transform: uppercase;
 }
 
@@ -259,7 +259,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#606060;
-	text-indent: 2em;
+	margin-left: 2em;
 	text-transform: uppercase;
 }
 
@@ -270,7 +270,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#606060;
-	text-indent: 3em;
+	margin-left: 3em;
 	text-transform: uppercase;
 }
 
@@ -281,7 +281,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#606060;
-	text-indent: 4em;
+	margin-left: 4em;
 	text-transform: uppercase;
 }
 
