--- a/public/create/stylesets/open-bw.css
+++ b/public/create/stylesets/open-bw.css
@@ -225,7 +225,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 	text-transform: uppercase;
 }
 
@@ -235,7 +235,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 1em;
+	margin-left: 1em;
 	text-transform: uppercase;
 }
 
@@ -245,7 +245,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 2em;
+	margin-left: 2em;
 	text-transform: uppercase;
 }
 
@@ -255,7 +255,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 3em;
+	margin-left: 3em;
 	text-transform: uppercase;
 }
 
@@ -265,7 +265,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 4em;
+	margin-left: 4em;
 	text-transform: uppercase;
 }
 
