--- a/public/create/stylesets/pleasant-bw.css
+++ b/public/create/stylesets/pleasant-bw.css
@@ -217,7 +217,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 600;
 	color:#7F7E7E;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 }
 
 .toc-item-h3 {
@@ -226,7 +226,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#7F7E7E;
-	text-indent: 1em;
+	margin-left: 1em;
 }
 
 .toc-item-h4 {
@@ -235,7 +235,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#7F7E7E;
-	text-indent: 2em;
+	margin-left: 2em;
 }
 
 .toc-item-h5 {
@@ -244,7 +244,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#7F7E7E;
-	text-indent: 3em;
+	margin-left: 3em;
 }
 
 .toc-item-h6 {
@@ -253,7 +253,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#7F7E7E;
-	text-indent: 4em;
+	margin-left: 4em;
 }
 
 
