--- a/public/create/stylesets/future-color.css
+++ b/public/create/stylesets/future-color.css
@@ -223,7 +223,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 700;
 	color:#85BB65;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 }
 
 .toc-item-h3 {
@@ -233,7 +233,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#85BB65;
-	text-indent: 1em;
+	margin-left: 1em;
 }
 
 .toc-item-h4 {
@@ -243,7 +243,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#85BB65;
-	text-indent: 2em;
+	margin-left: 2em;
 }
 
 .toc-item-h5 {
@@ -253,7 +253,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#85BB65;
-	text-indent: 3em;
+	margin-left: 3em;
 }
 
 .toc-item-h6 {
@@ -263,7 +263,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#85BB65;
-	text-indent: 4em;
+	margin-left: 4em;
 }
 
 /*Name: Colophon*/
