--- a/public/create/stylesets/meta-bw.css
+++ b/public/create/stylesets/meta-bw.css
@@ -209,7 +209,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 700;
 	color:#000000;
-	text-indent: 0.5em;
+	margin-left: 0.5em;
 }
 
 .toc-item-h3 {
@@ -218,7 +218,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 1em;
+	margin-left: 1em;
 }
 
 .toc-item-h4 {
@@ -227,7 +227,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 2em;
+	margin-left: 2em;
 }
 
 .toc-item-h5 {
@@ -236,7 +236,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 3em;
+	margin-left: 3em;
 }
 
 .toc-item-h6 {
@@ -245,7 +245,7 @@ figcaption {
 	font-style:normal;
 	font-weight: 400;
 	color:#000000;
-	text-indent: 4em;
+	margin-left: 4em;
 }
 
 /*Name: Colophon*/
