--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -25,6 +25,28 @@ body, html { position: relative; font-size: 100%; padding: 0; margin: 0; }
 	clear: both;
 }
 
+/* Standard Elements */
+button, .btn-primary, .btn-secondary {
+	outline: none;
+	border: none;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+	border-radius: 1px;
+	-webkit-appearance: none;
+	font-size: 16px;
+	font-weight: 700;
+	text-align: center;
+	cursor: pointer;
+	margin: 0;
+	padding: 6px 10px 7px;
+}
+.btn-primary {
+	background: #fff265;
+}
+.btn-secondary {
+	background: #efefef;
+}
+
 /* General Styling */
 body {
 	background: none #F8F9F9;
@@ -147,22 +169,18 @@ input[type="password"], input[type="text"], input[type="email"] {
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
 	-webkit-appearance: none;
-	border: none;
+	border: 1px solid #f6f6f6;
 	background: #f6f6f6;
 	font-size: 15px;
-	width: 25%;
-	height: 32px;
-	padding: 0 5px 0 5px;
+	padding: 6px 8px;
 	margin: 0 5px 0 0;
 }
 input.has-error {
-	border: 1px solid #b94a48;
+	border-color: #ff0000;
 }
 input:focus {
-	outline: -webkit-focus-ring-color auto 5px;
-	outline-color: -webkit-focus-ring-color;
-	outline-style: auto;
-	outline-width: 5px;
+	border-color: #ffff99;
+	outline: none;
 }
 textarea {
 	-moz-border-radius: 1px;
@@ -176,45 +194,6 @@ textarea {
 	height: 32px;
 	padding: 0 0 0 15px;
 	margin: 0 5px 0 0;
-}
-
-/*.main > section input {
-	border: none;
-	background: #fff;
-	color: #000;
-	padding: 0.5em;
-	display: inline-block;
-	width: 90%;
-	margin: 5px 0 0;
-	font-size: 0.8em;
-	outline: none;
-}
-.main > section input:focus {
-	border: 1px solid #ffff99;
-	border-radius: 5px;
-	outline: none;
-}*/
-
-.main > section button {
-	outline: none;
-	border: none;
-	background: #ffff99;
-	color: #000;
-	padding: 0.5em;
-	display: inline-block;
-	width: 90%;
-	cursor: pointer;
-	margin: 5px 0 0;
-	font-size: 0.8em;
-}
-
-.main > section button.active {
-	background: #CCCC66;
-}
-
-.main > section button.disabled {
-	background: #B3B34D;
-	pointer-events: none;
 }
 
 .icon-drop:before,
@@ -243,7 +222,9 @@ textarea {
 	display: none;
 }
 
+
 /*registration styling*/
+
 .registration {
 	background-color: #c6c6c6;
 	position: fixed;
@@ -253,37 +234,65 @@ textarea {
 	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
 	bottom: 0;
 }
-.green {
+.registration.green {
 	background-color: #5cb85c;
 }
 
-#registrationContainer{
-	width:99%;
+.registration-container {
+	width:100%;
 	margin:0 auto;
 }
-
+.registration-text {
+	font-weight: 700;
+	margin: 0 0 10px 0;
+}
+@media all and (min-width: 1220px) {
+	.registration-text {
+		float: left;
+		margin: 0 10px 0 0;
+		padding: 7px 0 0;
+	}
+}
 .registration-form {
 	position: relative;
 	float: left;
+	min-width: 692px;
+}
+.registration-social {
+	float: left;
+	margin: 10px 0 0 0;
+}
+@media all and (min-width: 890px) {
+	.registration-social {
+		margin: 0 0 0 10px;
+	}
 }
 
-.registration-text {
-	font-weight: 900;
-	width: 22%;
-	font-size:15px;
-	float: left;
-	padding-top:7px;
-	line-height: 1.3;
-	margin-right:5px;
+/*
+	TODO: "socialicons" styles COPIED from css/pages/frontpage.css: refactor into common location!
+		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, the page's style is completely broken.
+*/
+.socialicon {
+	background-color: #fff;
+	border-radius: 50%;
+	width: 33px;
+	height: 33px;
+	padding: 3px 0 0 0;
+	font-size: 20px;
+	text-align:center;
+	display: inline-block;
+	cursor:pointer;
+
+}
+.socialicon:hover {
+	background-color: #fff265;
 }
 
 .social-registration-text {
-	font-weight: 900;
-	bottom: 8px;
+	font-weight: 700;
+	bottom: 3px;
 	display: inline-block;
 	position: relative;
-	font-size:15px;
-	vertical-align: sub;
 	margin-right:5px;
 }
 
@@ -295,24 +304,8 @@ textarea {
 	width: 100%;
 	float: none;
 }
-.button.registration-button {
-	font-size: 15px;
-}
 .registration-button {
-	-moz-border-radius: 1px;
-	-webkit-border-radius: 1px;
-	border-radius: 1px;
-	-webkit-appearance: none;
-	border: none;
-	background: #fff265;
-	color: #231f20;
-	font-size: 20px;
-	font-weight: bold;
-	width: 120px;
-	height: 33px;
-	cursor: pointer;
-	margin: 0 0 0 5px;
-	text-align: center;
+	min-width: 100px;
 }
 .registration-close-button {
 	position: absolute;
@@ -328,19 +321,19 @@ textarea {
 
 .error-box {
 	position: absolute;
-	background: #FF0500;
+	background: #ff0000;
 	margin: -40px 0 0;
 	padding: 5px 10px;
 	color: #fff;
 }
 .error-box.error-box-name {
-	margin-left: 24px;
+	margin-left: 30px;
 }
 .error-box.error-box-email {
-	margin-left: 206px;
+	margin-left: 230px;
 }
 .error-box.error-box-password {
-	margin-left: 354px;
+	margin-left: 386px;
 }
 .error-box:after {
 	top: 100%;
@@ -351,13 +344,23 @@ textarea {
 	width: 0;
 	position: absolute;
 	pointer-events: none;
-	border-color: rgba(213, 0, 0, 0);
-	border-top-color: #FF0500;
+	border-color: rgba(0, 0, 0, 0);
+	border-top-color: #ff0000;
 	margin-left: -3px;
 }
 
 
-/* Styling for the ngProgress itself */
+/* Styling for the ngProgress */
+
+#ngProgress-container {
+	position: fixed;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 99999;
+}
 #ngProgress {
 	margin: 0;
 	padding: 0;
@@ -372,17 +375,6 @@ textarea {
 	-moz-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
-}
-
-/* Styling for the ngProgress-container */
-#ngProgress-container {
-	position: fixed;
-	margin: 0;
-	padding: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 99999;
 }
 
 .feedback{
@@ -412,7 +404,9 @@ textarea {
 	transform: translateY(-50%);
 }
 
+
 /* Styling for autocomplete */
+
 .autocomplete{
   width: 100%;
   position: relative;
@@ -454,34 +448,4 @@ textarea {
 
 .autocomplete li.active .highlight {
   background: #fff265;
-}
-
-/*
-	TODO: "socialicons" styles COPIED from css/pages/frontpage.css: refactor into common location!
-		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, the page's style is completely broken.
-*/
-.socialicons {
-	width: 16%;
-	float: left;
-}
-
-.socialicon {
-	background-color: #fff;
-	border-radius: 50%;
-	width: 33px;
-	height: 33px;
-	padding: 5px;
-	font-size: 20px;
-	text-align:center;
-	display: inline-block;
-	cursor:pointer;
-
-}
-
-.socialicon:hover {
-	background-color: #fff265;
-}
-
-.socialicons a {
-	color: #ABACAF;
 }
