--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -304,7 +304,7 @@ html, body {
 .projectDocument-archived {
 	opacity: 0.5;
 }
-textarea#renameProjectDocument, textarea#renameStyleset, textarea#renameStyle {
+textarea.renameProjectDocument, textarea.renameStyleset, textarea.renameStyle {
 	width: 100%;
 	height: 64px;
 	border: 1px solid #ffff99;
