removing defined width and inserted a calculated to make it fit in different screen sizes

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -192,7 +192,9 @@ html, body {
 .editor {
 	position: relative;
 	margin: 0 auto;
-	width: 800px;
+	min-width: 250px;
+	max-width: 800px;
+	width: calc(100% - 100px);
 }
 .editor .toolbar-area {
 }
