new alpha onboard changes: new Test the alpha button, new signup link and form added at the bottom

--- a/public/css/pages/frontpage.css
+++ b/public/css/pages/frontpage.css
@@ -138,7 +138,12 @@ div.half {
 .create_logo {
 	padding: 50px 0 30px;
 }
-
+.newsletter-signup-text{
+	margin-top: 100px;
+}
+.newsletter-signup-text a{
+	text-decoration: underline;
+}
 #login-extras {
 	font-size: 70%;
 	float: left;
@@ -160,6 +165,9 @@ div.half {
 	text-align: center;
 	margin-top: -38px;
 	float: right;
+}
+.socialicons-bottom{
+
 }
 .socialicon {
 	background-color: #fff;
