--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -449,3 +449,28 @@ textarea {
 .autocomplete li.active .highlight {
   background: #fff265;
 }
+
+.notifications{
+	outline: none;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+	border-radius: 1px;
+	-webkit-appearance: none;
+	background: #fff265;
+	color: #231f20;
+	font-size: 16px;
+	font-weight: bold;
+	cursor: pointer;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	width: 250px;
+	padding: 5px;
+	position:fixed;
+	bottom:73px;
+	left:50%;
+	margin-left: -125px;
+}
+.readmore{
+	text-decoration: underline;
+	color:#999;
+}
