changes after PO review; fixed css issue of notifications area

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -470,6 +470,9 @@ textarea {
 	left:50%;
 	margin-left: -125px;
 }
+.loggedin{
+	bottom:0;
+}
 .readmore{
 	text-decoration: underline;
 	color:#999;
