--- a/public/css/pages/frontpage.css
+++ b/public/css/pages/frontpage.css
@@ -139,7 +139,7 @@ div.half {
 	padding: 50px 0 30px;
 }
 .newsletter-signup-text{
-	margin-top: 100px;
+	/*margin-top: 100px;*/
 }
 .newsletter-signup-text a{
 	text-decoration: underline;
