--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -3,12 +3,12 @@
 */
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
-body {
+#scripler body {
 	margin:0.5em;
 /*Margin is added to body to avoid text being directly on the edge of ebook-readers taking css seriously (which is increasingly few - I'm looking at you apple). But just a litte, to preserve screen estate in most usage scenarios. But it might conflict with e.g. wanting to define a backgroundcolor edge to edge ...*/
 }
@@ -28,79 +28,77 @@ blockquote:after  {
 content: close-quote;
 }*/
 
-blockquote p {
+#scripler blockquote p {
 	margin:0;
 }
 
 /*HEADING BEHAVIOUR - Makes Several lines of headings look nice.*/
 
-h1 + h1 {
+#scripler h1 + h1 {
 	margin:0;
 }
 
-h2 + h2 {
+#scripler h2 + h2 {
 	margin:0;
 }
 
-h3 + h3 {
+#scripler h3 + h3 {
 	margin:0;
 }
 
-h4 + h4 {
+#scripler h4 + h4 {
 	margin:0;
 }
 
-h5 + h5 {
+#scripler h5 + h5 {
 	margin:0;
 }
 
-h6 + h6 {
+#scripler h6 + h6 {
 	margin:0;
 }
 
-h1 + p {
+#scripler h1 + p {
 	margin-top:0;
 }
 
-h2 + p {
+#scripler h2 + p {
 	margin-top:0;
 }
 
-h3 + p {
+#scripler h3 + p {
 	margin-top:0;
 }
 
-h5 + p {
+#scripler h5 + p {
 	margin-top:0;
 }
 
-h6 + p {
+#scripler h6 + p {
 	margin-top:0;
 }
 
-
-
-strong {
+#scripler strong {
 	font-weight: 700;
 }
 
-em {
+#scripler em {
 
 	font-style: italic;
 }
 
-figure {
+#scripler figure {
 	margin: 1.5em 0 0 0;
 	page-break-inside:avoid;
 }
 /*Epub2-fallback css*/
-/*div.figure {
+/*#scripler div.figure {
 	margin: 1em 0;
 	page-break-inside:avoid;
 }*/
 
 /*Scripler-logo-css, part of the Insert Title-page html-chunk*/
-.logo {
+#scripler .logo {
 	width:26%;
 	height:auto;
 	page-break-inside: avoid;
@@ -109,7 +107,7 @@ figure {
 }
 
 /*Cover image css*/
-.cover {
+#scripler .cover {
 	width: 100%;
 	margin:0;
 	height: auto;
@@ -123,18 +121,18 @@ body.cover {
 /*PARAGRAPH RULES*/
 
 /*This makes first line indents on paragraphs that follows paragraphs (this is currently disabled). And removes the margin-top.*/
-p + p {
+#scripler p + p {
 	/*text-indent: 1.5em;*/
 	margin-top: 0;
 }
 
 /*Currently disabled: This removes first line indent from paragraphs that comes after empty paragraphs*/
-/*p.empty-paragraph + p {
+/*#scripler p.empty-paragraph + p {
 	text-indent: 0;
 }*/
 
 /*When empty paragraphs are added, the should not have margin-top, since they are themselves acting as a sort of margin-top with their emptyness. The line-height is then specified to have the same height as the same removed margin-top.*/
-p.empty-paragraph {
+#scripler p.empty-paragraph {
 	line-height:1.5em;
 	margin-top:0;
 }
@@ -143,154 +141,154 @@ p.empty-paragraph {
 	text-indent:0;
 }*/
 
-p.toc-item-h1 + p.toc-item-h2 {
+#scripler p.toc-item-h1 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h1 + p.toc-item-h3 {
+#scripler p.toc-item-h1 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h1 + p.toc-item-h4 {
+#scripler p.toc-item-h1 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h1 + p.toc-item-h5 {
+#scripler p.toc-item-h1 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h1 + p.toc-item-h6 {
+#scripler p.toc-item-h1 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 /*Currently disabled: This removes first line indent in h1 following h2 items in toc*/
-/*p.toc-item-h2 + p.toc-item-h1 {
+/*#scripler p.toc-item-h2 + p.toc-item-h1 {
 	text-indent:0;
 }*/
 
-p.toc-item-h2 + p.toc-item-h2 {
+#scripler p.toc-item-h2 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h2 + p.toc-item-h3 {
+#scripler p.toc-item-h2 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h2 + p.toc-item-h4 {
+#scripler p.toc-item-h2 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h2 + p.toc-item-h5 {
+#scripler p.toc-item-h2 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h2 + p.toc-item-h6 {
+#scripler p.toc-item-h2 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 /*Currently disabled: This removes first line indent in h1 following h3 items in toc*/
-/*p.toc-item-h3 + p.toc-item-h1 {
+/*#scripler p.toc-item-h3 + p.toc-item-h1 {
 	text-indent:0;
 }*/
 
-p.toc-item-h3 + p.toc-item-h2 {
+#scripler p.toc-item-h3 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h3 + p.toc-item-h3 {
+#scripler p.toc-item-h3 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h3 + p.toc-item-h4 {
+#scripler p.toc-item-h3 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h3 + p.toc-item-h5 {
+#scripler p.toc-item-h3 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h3 + p.toc-item-h6 {
+#scripler p.toc-item-h3 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 /*Currently disabled: This removes first line indent in h1 following h4 items in toc*/
-/*p.toc-item-h4 + p.toc-item-h1 {
+/*#scripler p.toc-item-h4 + p.toc-item-h1 {
 	text-indent:0;
 }*/
 
-p.toc-item-h4 + p.toc-item-h2 {
+#scripler p.toc-item-h4 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h4 + p.toc-item-h3 {
+#scripler p.toc-item-h4 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h4 + p.toc-item-h4 {
+#scripler p.toc-item-h4 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h4 + p.toc-item-h5 {
+#scripler p.toc-item-h4 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h4 + p.toc-item-h6 {
+#scripler p.toc-item-h4 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 /*Currently disabled: This removes first line indent in h1 following h5 items in toc*/
-/*p.toc-item-h5 + p.toc-item-h1 {
+/*#scripler p.toc-item-h5 + p.toc-item-h1 {
 	text-indent:0;
 }*/
 
-p.toc-item-h5 + p.toc-item-h2 {
+#scripler p.toc-item-h5 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h5 + p.toc-item-h3 {
+#scripler p.toc-item-h5 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h5 + p.toc-item-h4 {
+#scripler p.toc-item-h5 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h5 + p.toc-item-h5 {
+#scripler p.toc-item-h5 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h5 + p.toc-item-h6 {
+#scripler p.toc-item-h5 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 /*Currently disabled: This removes first line indent in h1 following h6 items in toc*/
-/*p.toc-item-h6 + p.toc-item-h1 {
+/*#scripler p.toc-item-h6 + p.toc-item-h1 {
 	text-indent:0;
 }*/
 
-p.toc-item-h6 + p.toc-item-h2 {
+#scripler p.toc-item-h6 + p.toc-item-h2 {
 	margin-left:0.5em;
 }
 
-p.toc-item-h6 + p.toc-item-h3 {
+#scripler p.toc-item-h6 + p.toc-item-h3 {
 	margin-left:1em;
 }
 
-p.toc-item-h6 + p.toc-item-h4 {
+#scripler p.toc-item-h6 + p.toc-item-h4 {
 	margin-left:2em;
 }
 
-p.toc-item-h6 + p.toc-item-h5 {
+#scripler p.toc-item-h6 + p.toc-item-h5 {
 	margin-left:3em;
 }
 
-p.toc-item-h6 + p.toc-item-h6 {
+#scripler p.toc-item-h6 + p.toc-item-h6 {
 	margin-left:4em;
 }
 
 
 /*/*This removes margin-top from code-paragraphs that comes after code-paragraphs*/
-code.block + code.block {
+#scripler code.block + code.block {
 	margin-top:0;
 }
 
