--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -1,8 +1,3 @@
-html, body {
-	width: 100%;
-	height: 100%;
-}
-
 .text-align-left {
 	text-align: left;
 }
@@ -20,7 +15,7 @@ html, body {
 }
 
 .menu-left, .menu-right {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	z-index: 1;
 	background-color: #f3f3f3;
@@ -57,7 +52,7 @@ html, body {
 
 .menu-tabs {
 	z-index: 2;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	margin: auto;
 	width: 50px;
@@ -181,32 +176,30 @@ html, body {
 	color: #999;
 }
 
-.container {
-	padding-top: 0px;
-	padding-bottom: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-	background-color: #fafafa;
-}
-
 .editor {
 	position: relative;
 	margin: 0 auto;
 	min-width: 250px;
 	max-width: 800px;
-	width: calc(100% - 100px);
+	width: calc(100% - 140px);
 	transition: all 1s;
 	-moz-transition: all 1s;
 	-ms-transition: all 1s;
 	-webkit-transition: all 1s;
 	-o-transition: all 1s;
 }
-.editor.menu-extended {
-	width: calc(100% - 610px);	
+.editor.content {
+	height: calc(100% - 50px);
+	overflow: hidden;
 }
-.editor .toolbar-area {
+.editor.menu-extended {
+	width: calc(100% - 640px);	
 }
 
+#cke_bodyeditor, .cke_inner, .cke_wysiwyg_frame {
+	width: 100% !important;
+	height: 100%;
+}
 /* This should with time be fixed in the menubar plugin or how it works in ckeditor, a lot of styles are set on the elements */
 .cke_toolbox {
 	margin: 0 auto !important;
