--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -1,5 +1,5 @@
 /* General */
-body, html { position: relative; font-size: 100%; padding: 0; margin: 0; }
+body, html { position: relative; width: 100%; height: 100%; overflow: hidden; font-size: 100%; padding: 0; margin: 0; }
 
 /* Angular Cloak */
 [ng\:cloak], [ng-cloak], .ng-cloak {
@@ -90,13 +90,28 @@ a:hover {
 	color: #666;
 }
 
-.main, .container > header {
+.container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-color: #fafafa;
+}
+.container.shownotification {
+	height: calc(100% - 142px);
+}
+@media all and (min-width: 890px) {
+	.container.shownotification {
+		height: calc(100% - 102px);
+	}
+}
+@media all and (min-width: 1220px) {
+	.container.shownotification {
+		height: calc(100% - 72px);
+	}
+}
+.container > header {
 	width: 100%;
 	margin: 0 auto;
-	padding: 1em;
-}
-
-.container > header {
 	padding: 1em;
 }
 
@@ -236,6 +251,7 @@ textarea {
 }
 .registration.green {
 	background-color: #5cb85c;
+	padding: 27px 20px 26px;
 }
 
 .registration-container {
@@ -248,6 +264,10 @@ textarea {
 	min-width: 310px;
 }
 @media all and (min-width: 1220px) {
+	.registration.green {
+		background-color: #5cb85c;
+		padding: 23px 20px;s
+	}
 	.registration-text {
 		float: left;
 		margin: 0 10px 0 0;
@@ -389,14 +409,12 @@ textarea {
 	padding: 0;
 	text-align: center;
 }
-
-.feedback-fixed {
-	position:fixed;
+.feedback.fixed-position {
+	position:absolute;
 	bottom:0;
 	right:0;
 	min-height: 150px;
 }
-
 .feedback img {
 	position: relative;
 	top: 50%;
@@ -451,7 +469,7 @@ textarea {
   background: #fff265;
 }
 
-.notifications{
+.notifications {
 	outline: none;
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
@@ -466,12 +484,22 @@ textarea {
 	font-family: 'Roboto', sans-serif;
 	width: 250px;
 	padding: 5px;
-	position:fixed;
-	bottom:73px;
-	left:50%;
+	position: absolute;
+	bottom: 144px;
+	left: 50%;
 	margin-left: -125px;
 }
-.loggedin{
+@media all and (min-width: 890px) {
+	.notifications {
+		bottom: 102px;
+	}
+}
+@media all and (min-width: 1220px) {
+	.notifications {
+		bottom: 72px;
+	}
+}
+.notifications.loggedin {
 	bottom:0;
 }
 .readmore{
