--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -717,3 +717,11 @@ li.typo .style-copy-options p {
 .archived a {
     color: #6B6B6B;
 }
+
+.anchor-button{
+	margin-top: 40px;
+}
+
+.anchor-link{
+	display: block
+}
