--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -1,7 +1,3 @@
-.container {
-	padding: 20px;
-}
-
 .section-unisquare, .section-projects {
 	float: left;
 }
@@ -37,6 +33,7 @@
 .projects-title {
 	margin: 0 0 5px 0 !important;
 	font-size: 40px;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
 	color: #000;
 }
@@ -47,24 +44,30 @@
 
 .project {
 	position: relative;
-	background: url("../../images/ebook.svg");
 	margin: 0 15px 15px 0;
 	width: 100px;
 	height: 129px;
 	float: left;
+	display: table;
 	cursor: pointer;
 }
-.project:hover, .project:focus {
-	background: url("../../images/ebook_hover.svg")
-}
+
 .project.new {
-	background: url("../../images/ebook_new.svg")
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	cursor: pointer;
 }
-.project.new:hover, .project.new:focus {
-	background: url("../../images/ebook_new_hover.svg")
-}
-.project.archived {
-	background: url("../../images/ebook_archived.svg")
+
+.project-new-sign {
+	left: 0;
+	position: absolute;
+	text-align: center;
+	top: 14px;
+	width: 85%;
 }
 
 .project p {
@@ -77,7 +80,7 @@
 .project .project-options-show {
 	position: absolute;
 	top: 5px;
-	right: 20px;
+	right: 17px;
 	padding: 6px;
 	cursor: pointer;
 	z-index: 15;
@@ -104,10 +107,18 @@
 .project-options {
 	position: absolute;
 	top: 20px;
-	right: 20px;
+	right: 5px;
 	background: none #fff;
 	z-index: 10;
 	border: 1px solid #000;
+}
+.project-options-hide {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width:100%;
+	height:100%;
+	z-index:-1;
 }
 .project-options-menupoint {
 	cursor: pointer;
@@ -117,17 +128,45 @@
 .project-options-menupoint:hover {
 	background: none #ffffcc;
 }
+.project-options-dates {
+	border-top: 1px solid #eee;
+	padding: 10px 0 5px;
+}
+.project-options-dates div {
+	font-size: 10px;
+	width: 40%;
+	float: left;
+}
+.project-options-dates div.dates {
+	color: #ccc;
+	font-size: 10px;
+	width: 60%;
+	text-align: right;
+}
 .project-archived {
 	opacity: 0.5;
 }
 .project-link {
+	left: 0;
 	position: absolute;
-	top: 0;
-	left: 6px;
 	text-align: center;
-	padding: 30px 5px 5px;
-	width: 75px;
-	height: 110px;
+	margin-top:14px;
+	margin-left:7px;
+	width:70%;
+	height: 72%;
+	overflow:hidden;
+}
+
+a.project-link {
+	 word-wrap: break-word;
+
+}
+a.showAll{
+	overflow:visible;
+	background-color:#FFF;
+	height: auto;
+	/*box-shadow:1px 1px 0px #000;
+*/
 }
 
 .filter-sort, .filter-search {
@@ -141,14 +180,9 @@
 }
 
 textarea#rename {
-	position: absolute;
-	top: 0;
-	left: 6px;
-	text-align: center;
-	padding: 5px;
-	margin: 30px 5px 5px;
-	width: 65px;
-	height: 75px;
+	width: 90%;
+	margin-top: 37px;
+	height: 100%;
 	border: 1px solid #ffff99;
 	resize: none;
 	outline: none;
@@ -195,10 +229,6 @@ textarea#rename {
 .logo {
 	width: 30%;
 }
-.readmore{
-	text-decoration: underline;
-	color:#999;
-}
 .uni-bottom-box {
 	height: 60px;
 	background-color: #fff;
@@ -208,7 +238,8 @@ textarea#rename {
 	bottom: 0;
 }
 .user-box {
-	padding: 6px;
+	padding-top: 6px;
+	padding-left: 20px;
 }
 .user-image {
 	float: left;
@@ -268,6 +299,7 @@ hr {
 	border-radius: 1px;
 	-webkit-appearance: none;
 	color: #818285;
+	font-family: 'Roboto', sans-serif;
 }
 .user-settings-options .user-email input:disabled {
 	background: #f6f6f6;
@@ -297,4 +329,15 @@ hr {
 }
 .edit-newsletter {
 	padding-top: 5px;
+}
+.archived {
+	background-color: #CFCFCF;
+}
+.archived a {
+	color: #6B6B6B;
+}
+
+img.cover{
+	margin-left:-15px;
+	margin-right:15px;
 }
