--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -111,8 +111,8 @@ content: close-quote;
 .cover { 
     width:102%;
 	margin: 0;
-	margin-left: -20px;
-	margin-top: -20px;
+	margin-left: 1%;
+	margin-top: 1%;
 	height: auto;
 	page-break-inside: avoid;
 	 
