--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -109,13 +109,13 @@ content: close-quote;
 /*Cover image css*/
  
 .cover { 
-    width:102%;
-	margin: 0;
-	margin-left: 1%;
-	margin-top: 1%;
+	width:102%; 
 	height: auto;
-	page-break-inside: avoid;
-	 
+	margin-left: -1%;
+	margin-right: -1%;
+	margin-top: -1%;
+	margin-bottom: -1%; 
+	page-break-inside: avoid;	 
 }
 
 body.cover {
