epub cover is ok

--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -108,7 +108,7 @@ content: close-quote;
 
 /*Cover image css*/
  
-.cover { 
+#scripler .cover { 
 	width:102%; 
 	height: auto;
 	margin-left: -1%;
