changed the check and selection for designs

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -412,6 +412,9 @@ li.typo p:first-child {
 	width: 90%;
 	margin: 0 auto;
 }
+.typo-children-style.selected {
+	background-color: #f3f3f3;
+}
 
 .style.new {
 	height: 40px;
