--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -413,17 +413,19 @@ li.typo p:first-child {
 	margin: 0 auto;
 }
 .typo-children-style.selected {
-	background-color: #f3f3f3;
+	background-color: #c3c3c3;
 }
 
 .style.new {
+	width: 90%;
 	height: 40px;
 	text-align: center;
+	margin: 0 auto;
 }
 .style.new p {
-	padding: 0;
-	margin-left: -10px;
+	padding: 10px;
 }
+
 .style-isblock {
 	position: relative;
 	color: #eee;
