--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -213,7 +213,7 @@
 	height: 95px;
 	background: none #fefefe;
 	float: left;
-	border: 1px solid #ffff99;
+	border: 1px solid #e6e6e6;
 	box-shadow: 0px 5px 5px -5px #ccc;
 	cursor: pointer;
 }
